Added windows and mac os workflows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ license = "BSD-3-Clause"
 edition = "2021"
 rust-version = "1.60"
 description = "Parallel, async file I/O library"
-#repository = "https://github.io/uv-rust/par_io"
-#homepage = "https://github.io/uv-rust/par_io"
+repository = "https://github.io/uv-rust/par_io"
+homepage = "https://github.io/uv-rust/par_io"
 readme = "Readme.md"
-#documentation = ""
-keywords = ["I/O", "parallel", "async", "file"]
+documentation = "https://docs.rs/par_io"
+keywords = ["i/o", "parallel", "async", "file"]
 categories = ["Asynchronous", "Filesystem", "Concurrency"]
 
 [dependencies]
