--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,8 +10,40 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-ubuntu:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain:
+          - stable
+          - beta
+          - nightly
+    steps:
+    - uses: actions/checkout@v3
+    - run: rustup update ${{matrix.toolchain}} && rustup default ${{matrix.toolchain}}
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
+      
+  build-windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        toolchain:
+          - stable
+          - beta
+          - nightly
+    steps:
+    - uses: actions/checkout@v3
+    - run: rustup update ${{matrix.toolchain}} && rustup default ${{matrix.toolchain}}
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --
+      
+  build-macos:
+    runs-on: macos-latest
     strategy:
       matrix:
         toolchain:
