Updated manifest and docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Ugo Varetto <ugovaretto@gmail.com>"]
 license = "BSD-3-Clause"
 edition = "2021"
 rust-version = "1.60"
-description = "Parallel, async file I/O library"
-repository = "https://github.io/uv-rust/par_io"
-homepage = "https://github.io/uv-rust/par_io"
+description = "Parallel, async file I/O library with control over memory usage with no dependencies."
+repository = "https://github.com/uv-rust/par_io"
+homepage = "https://github.com/uv-rust/par_io"
 readme = "Readme.md"
 documentation = "https://docs.rs/par_io"
 keywords = ["i/o", "parallel", "async", "file"]
